// Copyright (c) Meta Platforms, Inc. and affiliates.
//
// Licensed under the Apache License, Version 2.0 (the "License");
// you may not use this file except in compliance with the License.
// You may obtain a copy of the License at
//
//     http://www.apache.org/licenses/LICENSE-2.0
//
// Unless required by applicable law or agreed to in writing, software
// distributed under the License is distributed on an "AS IS" BASIS,
// WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
// See the License for the specific language governing permissions and
// limitations under the License.

syntax = "proto3";

package cachelib.grpc;

option java_package = "com.facebook.cachelib.grpc";
option java_outer_classname = "CacheProto";
option java_multiple_files = true;

// =============================================================================
// CacheService - High-performance caching service powered by CacheLib
// =============================================================================
service CacheService {
  // Basic Operations
  rpc Get(GetRequest) returns (GetResponse) {}
  rpc Set(SetRequest) returns (SetResponse) {}
  rpc Delete(DeleteRequest) returns (DeleteResponse) {}
  rpc Exists(ExistsRequest) returns (ExistsResponse) {}

  // Batch Operations
  rpc MultiGet(MultiGetRequest) returns (MultiGetResponse) {}
  rpc MultiSet(MultiSetRequest) returns (MultiSetResponse) {}

  // Atomic Operations
  rpc SetNX(SetNXRequest) returns (SetNXResponse) {}
  rpc Increment(IncrementRequest) returns (IncrementResponse) {}
  rpc Decrement(DecrementRequest) returns (DecrementResponse) {}
  rpc CompareAndSwap(CompareAndSwapRequest) returns (CompareAndSwapResponse) {}

  // TTL Operations
  rpc GetTTL(GetTTLRequest) returns (GetTTLResponse) {}
  rpc Touch(TouchRequest) returns (TouchResponse) {}

  // Key Scanning
  rpc Scan(ScanRequest) returns (ScanResponse) {}

  // Administration
  rpc Stats(StatsRequest) returns (StatsResponse) {}
  rpc Ping(PingRequest) returns (PingResponse) {}
  rpc Flush(FlushRequest) returns (FlushResponse) {}
}

// =============================================================================
// Basic Operation Messages
// =============================================================================

message GetRequest {
  string key = 1;
}

message GetResponse {
  bool found = 1;
  bytes value = 2;
  int64 ttl_remaining = 3;
}

message SetRequest {
  string key = 1;
  bytes value = 2;
  int64 ttl_seconds = 3;
}

message SetResponse {
  bool success = 1;
  string message = 2;
}

message DeleteRequest {
  string key = 1;
}

message DeleteResponse {
  bool success = 1;
  bool key_existed = 2;
  string message = 3;
}

message ExistsRequest {
  string key = 1;
}

message ExistsResponse {
  bool exists = 1;
}

// =============================================================================
// Batch Operation Messages
// =============================================================================

message MultiGetRequest {
  repeated string keys = 1;
}

message KeyValue {
  string key = 1;
  bytes value = 2;
  bool found = 3;
  int64 ttl_remaining = 4;
}

message MultiGetResponse {
  repeated KeyValue results = 1;
}

message MultiSetRequest {
  repeated SetRequest items = 1;
}

message MultiSetResponse {
  bool success = 1;
  int32 succeeded_count = 2;
  int32 failed_count = 3;
  string message = 4;
  repeated string failed_keys = 5;
}

// =============================================================================
// Atomic Operation Messages
// =============================================================================

message SetNXRequest {
  string key = 1;
  bytes value = 2;
  int64 ttl_seconds = 3;
}

message SetNXResponse {
  bool was_set = 1;
  bytes existing_value = 2;
  string message = 3;
}

message IncrementRequest {
  string key = 1;
  int64 delta = 2;
  int64 ttl_seconds = 3;
}

message IncrementResponse {
  bool success = 1;
  int64 new_value = 2;
  string message = 3;
}

message DecrementRequest {
  string key = 1;
  int64 delta = 2;
  int64 ttl_seconds = 3;
}

message DecrementResponse {
  bool success = 1;
  int64 new_value = 2;
  string message = 3;
}

message CompareAndSwapRequest {
  string key = 1;
  bytes expected_value = 2;
  bytes new_value = 3;
  int64 ttl_seconds = 4;
}

message CompareAndSwapResponse {
  bool success = 1;
  bytes actual_value = 2;
  string message = 3;
}

// =============================================================================
// TTL Operation Messages
// =============================================================================

message GetTTLRequest {
  string key = 1;
}

message GetTTLResponse {
  bool found = 1;
  int64 ttl_seconds = 2;
}

message TouchRequest {
  string key = 1;
  int64 ttl_seconds = 2;
}

message TouchResponse {
  bool success = 1;
  string message = 2;
}

// =============================================================================
// Key Scanning Messages
// =============================================================================

message ScanRequest {
  string pattern = 1;
  string cursor = 2;
  int32 count = 3;
}

message ScanResponse {
  repeated string keys = 1;
  string next_cursor = 2;
  bool has_more = 3;
}

// =============================================================================
// Administration Messages
// =============================================================================

message StatsRequest {
  bool detailed = 1;
}

message PoolStats {
  string pool_name = 1;
  int64 pool_size = 2;
  int64 pool_used = 3;
  int64 item_count = 4;
  double hit_rate = 5;
}

message StatsResponse {
  int64 total_size = 1;
  int64 used_size = 2;
  int64 item_count = 3;
  double hit_rate = 4;
  int64 get_count = 5;
  int64 hit_count = 6;
  int64 miss_count = 7;
  int64 set_count = 8;
  int64 delete_count = 9;
  int64 eviction_count = 10;
  int64 expired_count = 11;
  bool nvm_enabled = 12;
  int64 nvm_size = 13;
  int64 nvm_used = 14;
  int64 nvm_hit_count = 15;
  int64 nvm_miss_count = 16;
  int64 uptime_seconds = 17;
  string version = 18;
  repeated PoolStats pool_stats = 19;
}

message PingRequest {}

message PingResponse {
  string message = 1;
  int64 timestamp = 2;
}

message FlushRequest {
  bool include_nvm = 1;
}

message FlushResponse {
  bool success = 1;
  int64 items_removed = 2;
  string message = 3;
}
